@@ -113,4 +113,17 @@ public class Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+1556594 - Wonky detection of NullAssignment
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public void foo() {
+  assert isRoot() ? parentContext == null : parentContext != null;
+ }
+}
+     ]]></code>
+    </test-code>
 </test-data>
